--- a/Views/SupplierOrdersModule/SupplierOrdersPage.xaml
+++ b/Views/SupplierOrdersModule/SupplierOrdersPage.xaml
@@ -14,8 +14,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0" BorderThickness="0,0,0,0.5"
-            BorderBrush="{StaticResource SecondaryBrush}">
+        <Border Grid.Row="0" BorderThickness="0 0 0 1"
+            BorderBrush="{StaticResource BorderBrush}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -48,7 +48,9 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Border Grid.Row="0" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0,0,0.5">
+                <Border Grid.Row="0" 
+                        BorderBrush="{StaticResource BorderBrush}" 
+                        BorderThickness="0 0 0 1">
                     <Grid Margin="20,0" VerticalAlignment="Center">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -148,8 +150,8 @@
                     </Grid>
 
                     <Border Grid.Column="1" 
-                            BorderBrush="{StaticResource SecondaryBrush}" 
-                            BorderThickness="0.5,0,0,0">
+                            BorderBrush="{StaticResource BorderBrush}" 
+                            BorderThickness="1 0 0 0">
                         <Grid x:Name="SupplierOrderDetailsPanel"
                               Visibility="Visible" >
                             <Grid.RowDefinitions>
@@ -169,8 +171,8 @@
                                 </Grid.RowDefinitions>
 
                                 <Border Grid.Row="0" 
-                                        BorderThickness="0 0 0 0.5"
-                                        BorderBrush="{StaticResource SecondaryBrush}">
+                                        BorderThickness="0 0 0 1"
+                                        BorderBrush="{StaticResource BorderBrush}">
                                     <StackPanel Margin="20 10 20 12">
                                         <TextBlock x:Name="SupplierName" FontSize="13"
                                                    Style="{DynamicResource SubtitleLabelStyle}" />
@@ -211,8 +213,8 @@
 
                             </Grid>
 
-                            <Border x:Name="ButtonsPanel" Grid.Row="2" BorderBrush="{DynamicResource SecondaryBrush}"
-                                    BorderThickness="0 0.5 0 0">
+                            <Border x:Name="ButtonsPanel" Grid.Row="2" BorderBrush="{DynamicResource BorderBrush}"
+                                    BorderThickness="0 1 0 0">
                                 <Grid>
                                     <StackPanel x:Name="PaymentPanel"
                                                 Margin="20" 
