--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ItaliaPizzaClient.Views"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="MainWindow"
+        Title="ItaliaPizza v1.0 (Client)"
         Height="720"
         Width="1080" MinWidth="920">
     <Border Background="{StaticResource BackgroundBrush}">
